# sweepsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mix_reads.cpp
include/: file.hpp  mix_reads.hpp  parse_arguments.hpp  sampling.hpp  util.hpp  version.h.in
src/: mix_reads.cpp  parse_arguments.cpp  sampling.cpp  sweepsim.cpp
